app/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echo-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
#    app: echo-gateway-controller
  servers:
    - port:
        number: 8080
        name: http-wildcard
        protocol: HTTP
      hosts:
        - arch.homework

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-rule
spec:
  hosts:
    - arch.homework
  gateways:
    - echo-gateway
  http:
    - route:
      - destination:
          port:
            number: 80
          host: echoserver-v1
        weight: 50
      - destination:
          port:
            number: 80
          host: echoserver-v2
        weight: 50
